Quick fix to translation because I want to go to SXSW

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,3 +27,5 @@ en:
       confirmation_instructions:
         subject: 'Neighbours Can Help - Email confirmation instructions'
       
+    general:
+      back: Back  
